--- a/email/email.css
+++ b/email/email.css
@@ -1,16 +1,18 @@
 /* 页面 */
 .body {
-    background-color:white;
+    margin: 0 auto;
+    /** 居中 */
     height: 361px;
     width: 640px;
 }
+/*! 少用定位 */
 /* 容器 */
 .container {
     background-color: white;
     height: 327px;
     width: 600px;
     position: relative;
-    margin: 14.5px 17.5px 14.5px 17.5px;
+    /*? margin: 14.5px 17.5px 14.5px 17.5px; */
     border-radius: 10px;
     border: 3px solid rgb(151, 196, 212);
     box-shadow: 0px 0px 20px 5px rgba(108, 213, 234, 0.99);
@@ -97,6 +99,7 @@ button {
     border-color: #fff;
 }
 button:hover {
+    /* ?一个就够了 */
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 /* 邮件 */
@@ -129,13 +132,21 @@ button:hover {
     position: relative;
     cursor: pointer;
 }
+/* *三角形 */
 .list li span:after {
-    content : '>';
+    content : '';
+    width: 0;
+    height: 0;
     color: skyblue;
     position: absolute;
+    border-style: solid;
+    border-width: 8px 0 8px 5px;
+    border-color: transparent transparent transparent #8ecdeb;
     opacity: 0;
     transition: 0.5s;
-    right: -30px;
+    top: 50%;
+    right: -24px;
+    transform: translateY(-50%);
 }
 .list li:hover  span:after{
     opacity: 1;
@@ -153,8 +164,11 @@ button:hover {
     left: 90px;
     height: 140px;
     width: 415px;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: scroll;
+}
+/* *更好看 */
+::-webkit-scrollbar {
+    width: 0;
 }
 .p {
     background-image: linear-gradient(to right, rgba(123, 213, 249, 0.756), #fff);
@@ -189,6 +203,7 @@ button:hover {
     border-radius: 10px;
 }
 /* 底部 */
+/*?逆天 */
 .footer {
     position: absolute;
     bottom: 0;
